[package]
name = "asd"
description = "SSH/SFTP password automation"
authors = ["Missael Gastelum <missga@proton.me>"]
repository = "https://github.com/deadkper/asd.git"
license = "MIT"
version = "0.0.1-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
directories = "5.0.1"
edit = "0.1.5"
russh = "0.45.0"
scanpw = "1.0.0"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = "1.40.0"
toml = "0.8.19"
