[package]
name = "asd"
description = "SSH/SFTP password automation"
authors = ["Missael Gastelum <missga@proton.me>"]
repository = "https://github.com/deadkper/asd.git"
license = "MIT"
version = "0.0.1-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
clap = { version = "4.5.17", features = ["derive"] }
directories = "5.0.1"
edit = "0.1.5"
glob = "0.3.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
russh = "0.45.0"
scanpw = "1.0.0"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
termion = "4.0.2"
tokio = { version = "1.40.0", features = ["io-std"] }
tokio-fd = "0.3.0"
toml = "0.8.19"
